[tool.poetry]
name = "classy_config"
version = "0.6.0"
description = "ClassyConfig is a Python3 package aiming to remove the need for a config.py or settings.py file."
readme = "README.md"
repository = "https://github.com/GDWR/classy-config"
authors = ["GDWR <gregory.dwr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = ">=1.9,<3.0"
typing-inspect = ">=0.7.1,<0.10.0"
toml = "^0.10.2"
python-dotenv = ">=0.20,<1.1"

[tool.poetry.dev-dependencies]
pyright = "^1.1.314"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
flake8 = "^5.0.4"
Sphinx = "^6.2.1"
sphinxcontrib-napoleon = "^0.7"
flake8-annotations = "^2.9.1"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.3.12"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.18.2"
flake8-string-format = "^0.3.0"
pep8-naming = "^0.13.3"
furo = "^2023.3.27"

[tool.pyright]
include = ["classy_config"]
exclude = [
    "**/__pycache__",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
