[tool.poetry]
name = "classy_config"
version = "0.6.1"
description = "ClassyConfig is a Python3 package aiming to remove the need for a config.py or settings.py file."
readme = "README.md"
repository = "https://github.com/GDWR/classy-config"
authors = ["GDWR <gregory.dwr@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0.0"
tomli = "^2.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.373"
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
flake8 = "^7.0.0"
Sphinx = "^7.0.0"
flake8-annotations = "^3.0.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^24.0.0"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.18.2"
flake8-string-format = "^0.3.0"
pep8-naming = "^0.14.0"
furo = "^2024.8.6"

[tool.pyright]
include = ["classy_config"]
exclude = [
    "**/__pycache__",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
